# asprite

./: .gitignore  Cargo.toml  Makefile
asprite/: Cargo.toml
asprite/src/: app.rs  editor.rs  grid.rs  main.rs
asprite/src/cmd/: canvas.rs  mod.rs  sprite.rs
asprite/src/common/: bre.rs  gradient.rs  mod.rs
asprite/src/gui/: im.rs  mod.rs  render_graphics.rs
asprite/src/tool/: eye_dropper.rs  freehand.rs  mod.rs  primitive.rs
ex/: Cargo.toml  res.toml
ex/src/: app.rs  arena.rs  chain.rs  d8.rs  graphics.rs  input.rs  loader.rs  m.rs  main.rs  sprite.rs  sprite_batcher.rs  state.rs  time.rs  tsys.rs
ex/src/editor/: inspector.rs  layout.rs  mod.rs  theme.rs
ex/src/ui/: button.rs  context.rs  context.rs~  flow.rs  graphics.rs  guard.rs  id.rs  mod.rs  mouse.rs  ninepatch.rs
math/: Cargo.toml
math/src/: affine.rs  d8.rs  lib.rs  rect.rs  time.rs
renderer/: Cargo.toml
renderer/shader/: sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  text.frag.spv  text.vert  text.vert.spv
renderer/src/: affine.rs  chain.rs  errors.rs  fbo.rs  future.rs  group.rs  lib.rs  quad_indices.rs  renderer.rs  sprite_renderer.rs  sprite_shader.rs  text.rs  text_renderer.rs  text_shader.rs  texture.rs  vbo.rs  vertex.rs  win.rs  xbuf.rs
renderer/src/sprite/: mod.rs  renderer.rs  shader.rs  shader.vert  shader.vert.spv
renderer/src/text/: mod.rs  renderer.rs  shader.frag  shader.rs  shader.vert.spv
renderer/src/vg/: mod.rs  renderer.rs  shader.frag  shader.frag.spv  shader.rs  shader.vert  shader.vert.spv
res/: res.toml
res/w/: MR_doodle.ase  readme.txt
src/: app.rs  arena.rs  batcher.rs  bb.rs  bipbuffer.rs  bre.rs  button.rs  cmd_page.rs  ed.rs  editor.rs  errors.rs  flood_fill.rs  gradient.rs  grid.rs  layout.rs  line.rs  main.rs  map.rs  mask.rs  math.rs  open.rs  prev.rs  quad_indices.rs  render.rs  smallset.rs  sprite.rs  sprite_batcher.rs  texture.rs  theme.rs  tilemap.rs  tilemap_doc.rs  tilemap_header.rs  tilemap_trash.rs  tilemap_undo.rs  transform.rs  tsys.rs  util.rs  widget.rs
src/batcher/: affine.rs  errors.rs  fs.rs  group.rs  mod.rs  shader.rs  smallset.rs  spritebatch.frag  spritebatch.frag.spv  texture.rs  vs.rs
src/cmd/: canvas.rs  cmd_page.rs  editor.rs  mod.rs  sprite.rs
src/common/: bre.rs  flood_fill.rs  gradient.rs  math.rs  mod.rs  palette.rs
src/draw/: bresenham.rs  canvas.rs  common.rs  frame.rs  gradient.rs  layer.rs  mod.rs  palette.rs  scanline.rs  shape.rs  sieve.rs  sprite.rs  uniform.rs  view.rs  view_read.rs  view_write.rs
src/editor/: grid.rs  layout.rs  mod.rs  theme.rs
src/gui/: im.rs  mod.rs  render_graphics.rs
src/math/: affine.rs  d8.rs  ext.rs  mod.rs  rect.rs  size_iter.rs  stopwatch.rs  time.rs  util.rs
src/shader/: fs.rs  mod.rs  spritebatch.frag  spritebatch.frag.spv  vs.rs
src/stk/: button.rs
src/tool/: brush.rs  bucket.rs  editor.rs  ellipse.rs  eye_dropper.rs  freehand.rs  mod.rs  primitive.rs  receiver.rs  rectangle.rs
src/ui/: context.rs  dock.rs  event.rs  flow.rs  frame_drawer.rs  graphics.rs  guard.rs  id.rs  im.rs  menubar.rs  mod.rs  mouse.rs  ninepatch.rs  painter.rs  render.rs  render_graphics.rs  theme.rs  toggle.rs  transform.rs  widget.rs  win.rs
tiled/: Cargo.toml
tiled/src/: hex.rs  layer.rs  lib.rs  map.rs  renderer.rs  rpg.rs  shape.rs  terrain.rs  tile.rs  wang.rs
tiler/: Cargo.toml
ui/: Cargo.toml
(+42 files in other folders)
