[workspace]
members = [
	#"tiled",
	#"tiler",

	"ex",
	"renderer",

	"asprite",

	"ui",
	"math",
]

[features]
profiler = ["thread_profiler/thread_profiler"]

[dependencies]
thread_profiler = { version = "0.1", optional = true }

[profile.dev]
debug-assertions = false

[profile.release]
#opt-level = 1
lto = true
panic = 'abort'

# defaults

opt-level = 3
debug = false
rpath = false
#lto = false
debug-assertions = false
codegen-units = 1
#panic = 'unwind'
