[package]
name = "ex"
version = "0.1.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]

[dependencies]
renderer = { path = "../renderer" }

vulkano = "0.7"
vulkano-shader-derive = "0.7"
vulkano-win = "0.7"
cgmath = "0.15"
image = "0.17"
winit = "0.7"
time = "0.1.37"
rand = "0.3"
hibitset = "0.3"
fnv = "1"
specs = "0.10"
derivative = "1"
error-chain = "0.11"
rayon = "0.8"
