[package]
name = "ex"
version = "0.1.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]

[dependencies]
renderer = { path = "../renderer" }
math = { path = "../math" }

vulkano = "0.7"
vulkano-shader-derive = "0.7"
vulkano-win = "0.7"
winit = "0.7"

time = "0.1.37"
rand = "0.3"
hibitset = "0.3"
fnv = "1"
specs = "0.10"
derivative = "1"
error-chain = "0.11"
rayon = "0.9"

toml = "0.4"
serde = "1"
serde_derive = "1"
