[package]
name = "renderer"
version = "0.1.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]

[dependencies]
math = { path = "../math" }

vulkano = "0.7"
winit = "0.8"

image = "0.17"
derivative = "1"
error-chain = "0.11"
unicode-normalization = "0.1.5"
rusttype = "0.2.3"

lyon = "0.8"

lazy_static = "^0.2"

smallvec = "^0.4"

thread_profiler = { version = "0.1", optional = true }

[features]
profiler = ["thread_profiler/thread_profiler"]
